Update personal information and project details in index.html and single.html; revised job titles, skills, and project descriptions to reflect current expertise as a Full Stack Developer.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">I'm a <span>web designer</span> based in Lahore</h1>
+			            <h1 class="mb-4 mt-3">I'm a <span>Full Stack Developer</span> Based in Lahore</h1>
 			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
@@ -133,45 +133,56 @@
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
-          	<h1 class="big big-2">Resume</h1>
+          	<h1 class="big big-2" style="left: 50%; transform: translateX(-50%); text-align: center;">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Implementing responsive design and ensuring cross-browser compatibility is one of my polished skills.</p>
+            <p>As a Full Stack Developer. I specialize in automation engineering CRM Tools, Cross Platform Integrations, Shopify Plus development, and modern web technologies that drive enterprise e-commerce growth.</p>
           </div>
         </div>
-    		<div class="row">
+    		
+    		<div class="row mt-4">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2017-2021</span>
-    					<h2>Bachelor's Degree of CS</h2>
-    					<span class="position">PUCIT</span>
-    					<p class="mt-4">Used responsive elements and understood dynamic designs.</p>
+    					<span class="date">2024-Present</span>
+    					<h2>Full Stack Developer</h2>
+    					<span class="position">EcomExperts.io - Montreal, Canada</span>
+    					<p class="mt-4">Leading automation engineering and Shopify Plus development for enterprise e-commerce brands, specializing in complex workflow automation and custom app development.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2021-2022</span>
-    					<h2>Frontend-Developer</h2>
-    					<span class="position">Fiver</span>
+    					<h2>Frontend Developer</h2>
+    					<span class="position">Fiverr</span>
 						<p class="mt-4">Creating custom layouts, and integrating responsive elements.</p>
 					</div>
     			</div>
 
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2018-2020</span>
-    					<h2>Shopify Developer</h2>
-    					<span class="position">MetaDots.</span>
-						<p class="mt-4">Dynamic and interactive user interfaces using front-end technologies like JavaScript, AJAX, and other frameworks, specifically within the context of Shopify stores.</p>
+    					<span class="date">2023-2024</span>
+    					<h2>Automation Engineer</h2>
+    					<span class="position">EcomExperts.io - Montreal, Canada</span>
+    					<p class="mt-4">Designing and implementing sophisticated automation solutions using platforms like Notion, Pipedream, Slack, and HubSpot to streamline business processes and enhance operational efficiency.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2020-2021</span>
-    					<h2>Wordpress | Shopify Developer</h2>
-    					<span class="position">Fiver | Freelancing</span>
-						<p class="mt-4">Creating a seamless user experience across various devices by implementing responsive design principles.</p>
+    					<span class="date">2018-2020</span>
+    					<h2>Shopify Developer</h2>
+    					<span class="position">MetaDots</span>
+						<p class="mt-4">Dynamic and interactive user interfaces using front-end technologies like JavaScript, AJAX, and other frameworks, specifically within the context of Shopify stores.</p>
 					</div>
     			</div>
+				<div class="row" style="margin: 0 auto;">
+					<div class="col-md-12">
+						<div class="resume-wrap ftco-animate text-center">
+							<span class="date">2018-2022</span>
+							<h2>Bachelor's Degree of CS</h2>
+							<span class="position">PUCIT</span>
+							<p class="mt-4">Comprehensive computer science education focusing on algorithms, data structures, and software development principles.</p>
+						</div>
+					</div>
+				</div>
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="./images/cv1.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="./images/Muhammad Mujtaba Raza.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -257,39 +268,17 @@
 			<div class="container">
 				<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
-          	<h1 class="big big-2">Skills</h1>
+          	<h1 class="big big-2" style="left: 50%; transform: translateX(-50%); text-align: center;">Skills</h1>
             <h2 class="mb-4">My Skills</h2>
-            <p>Here's some of my skills centering around customization and development.</p>
+            <p>As a Full Stack Developer. I specialize in automation, CRM Tools, Shopify development, and modern web technologies that drive business growth.</p>
           </div>
         </div>
 				<div class="row">
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>JavaScript</h3>
+							<h3>JavaScript/TypeScript</h3>
 							<div class="progress">
-							 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-							    <span>90%</span>
-							  	</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>jQuery</h3>
-							<div class="progress">
-							 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
-							    <span>85%</span>
-							  	</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>HTML5</h3>
-							<div class="progress">
-							 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="95"
+							 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="95"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
 							    <span>95%</span>
 							  	</div>
@@ -298,7 +287,29 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>CSS3</h3>
+							<h3>React/Next.js</h3>
+							<div class="progress">
+							 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="90"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
+							    <span>90%</span>
+							  	</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
+							<h3>Shopify Development</h3>
+							<div class="progress">
+							 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="90"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
+							    <span>90%</span>
+							  	</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
+							<h3>API Development</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -309,20 +320,86 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>WordPress</h3>
+							<h3>Automation Platforms</h3>
 							<div class="progress">
-							 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-							    <span>70%</span>
+							 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="85"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
+							    <span>85%</span>
 							  	</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>Liquid</h3>
+							<h3>Node.js</h3>
 							<div class="progress">
-							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
+							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="85"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
+							    <span>85%</span>
+							  	</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
+							<h3>Liquid (Shopify)</h3>
+							<div class="progress">
+							 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="85"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
+							    <span>85%</span>
+							  	</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
+							<h3>Database Design</h3>
+							<div class="progress">
+							 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="80"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
+							    <span>80%</span>
+							  	</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
+							<h3>GraphQL</h3>
+							<div class="progress">
+							 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="80"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
+							    <span>80%</span>
+							  	</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
+							<h3>CRM Integration / Management</h3>
+							<div class="progress">
+							 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="85"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
+							    <span>85%</span>
+							  	</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
+							<h3>Webhook Development</h3>
+							<div class="progress">
+							 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="85"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
+							    <span>85%</span>
+							  	</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
+							<h3>Git/Version Control</h3>
+							<div class="progress">
+							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="90"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
 							    <span>90%</span>
 							  	</div>
@@ -338,31 +415,51 @@
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
-          	<h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">My Projects</h2>
-            <p style="text-align: left;">Following projects showcase my skills and experience through real-world examples of my work. Each project is briefly described with links to code repositories and live demos. They reflect my ability to solve complex problems, work with different technologies, and manage projects effectively.</p>
+          	<h1 class="big big-2" style="left: 50%; transform: translateX(-50%); text-align: center;">Projects</h1>
+            <h2 class="mb-4">My Projects & Work</h2>
+            <p style="text-align: left;">A showcase of my technical expertise through personal projects and professional achievements. While I cannot publicly display proprietary client work, these projects demonstrate my proficiency in full-stack development, e-commerce solutions, and modern web technologies.</p>
           </div>
         </div>
     		<div class="row">
-    			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project_1.png);">
+    			<div class="col-md-8">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/aut0mations.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="https://e-commerce-client-beryl.vercel.app/" style="text-decoration: underline;">FashionFinds</a></h3>
-	    					<span>Web Design</span>
+	    					<h3>Enterprise Automation Platform</h3>
 							<br>
-							<span><a style="color: black;" href="https://github.com/MujtabaRaza1/E-Commerce-user">Github Repo</a></span>
+							<span style="color: rgba(255,255,255,0.8); font-size: 13px;">Multi-platform automation system integrating Notion, Pipedream, Slack & HubSpot for enterprise e-commerce operations</span>
+	    				</div>
+    				</div>
+  				</div>
+  				<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project_2.png);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3>Custom Shopify Apps</h3>
+							<br>
+							<span style="color: rgba(255,255,255,0.8); font-size: 13px;">Developed custom Shopify Plus applications serving multiple enterprise merchants</span>
+	    				</div>
+    				</div>
+  				</div>
+  				<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project_5.png);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a style="text-decoration: underline;">Genius AI</a></h3>
+	    					<span>Full Stack Application</span>
+							<br>
+	    					<span><a style="color: black;" href="https://github.com/MujtabaRaza1/Genius">Github Repo</a></span>
 	    				</div>
     				</div>
   				</div>
   				<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project_5.png);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project_1.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="https://genius-pro-iota.vercel.app/dashboard" style="text-decoration: underline;">Genius</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a style="text-decoration: underline;">FashionFinds E-commerce</a></h3>
+	    					<span>Full Stack E-commerce Platform</span>
 							<br>
-	    					<span><a style="color: black;" href="https://github.com/MujtabaRaza1/Genius">Github Repo</a></span>
+							<span><a style="color: black;" href="https://github.com/MujtabaRaza1/E-Commerce-user">Github Repo</a></span>
 	    				</div>
     				</div>
   				</div>
@@ -372,7 +469,7 @@
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="https://movieland-123.netlify.app/" style="text-decoration: underline;">Movie Land</a></h3>
-	    					<span>Web Design</span>
+	    					<span>React Application</span>
 							<br>
 							<span><a style="color: black;" href="https://github.com/MujtabaRaza1/Movie-land-TestRE">Github Repo</a></span>
 	    				</div>
@@ -382,8 +479,8 @@
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project_4.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="https://e-commerce-admin-alpha.vercel.app/" style="text-decoration: underline;">E-Commerce CMS</a></h3>
-							<span>Web Design</span>
+							<h3><a style="text-decoration: underline;">E-Commerce CMS</a></h3>
+							<span>Admin Dashboard</span>
 							<br>
 							<span><a style="color: black;" href="https://github.com/MujtabaRaza1/E-Commerce-Dashboard">Github Repo</a></span>
 						</div>
@@ -529,7 +626,7 @@
       <div class="container">
       	<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
-            <h1 class="big big-2">Contact</h1>
+            <h1 class="big big-2" style="left: 50%; transform: translateX(-50%); text-align: center; width: min-content;">Contact</h1>
             <h2 class="mb-4">Contact Me</h2>
             <p>Unlocking Potential, Together as One: Where Excellence Meets Teamwork!</p>
           </div>
@@ -542,7 +639,7 @@
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3 class="mb-4">Address</h3>
-	            <p>15/6 Al-faisal Town Lahore Cantt</p>
+	            <p>1750 Dha Phase 9, Lahore.</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -615,7 +712,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>Software Engineer | Shopify | Frontend Developer</p>
+              <p>Full Stack Developer | EcomExperts.io | Automation, CRMs & Shopify Specialist</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://twitter.com/TheCoopLowski"><span class="icon-twitter"></span></a></li>
 				<li class="ftco-animate"><a href="https://www.linkedin.com/in/muhammad-mujtaba-raza-ii0786ii0/"><span class="icon-linkedin"></span></a></li>
@@ -654,9 +751,9 @@
             	<h2 class="ftco-heading-2">Have a Question?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">15/6 Al-faisal Town Lahore Cantt</span></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">1750 Dha Phase 9, Lahore.</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+92 308-4403950</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">mujtabashah6242@gmail.com</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">&nbsp;mujtabashah6242@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -687,4 +784,5 @@
   <script src="js/main.js"></script>
     
   </body>
+</html>
 </html>
