--- a/single.html
+++ b/single.html
@@ -335,7 +335,7 @@
             	<h2 class="ftco-heading-2">Have a Question?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">15/6 Al-faisal Town Lahore Cantt</span></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">1750 Dha Phase 9, Lahore.</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+92 308-4403950</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">mujtabashah6242@gmail.com</span></a></li>
 	              </ul>
